# Task-Scheduler-CS100-Final-Group-Project

./: .gitignore  CMakeLists.txt  README.md  commandtest.cpp  commandvalgrind  compositevalgrind  compositevalgrindcomp  main.cpp  strategyvalgrind
Project/: Project.cpp  Project.hpp  Project_test.cpp
Strategy/: Prioritize.cpp  Prioritize.hpp  Scheduler.cpp  Scheduler.hpp
Strategyheaders/: Prioritize.hpp
Strategysrc/: Prioritize.cpp  Scheduler.cpp  Strategy_test.cpp
Task/: Task.cpp  Task.hpp  Task_test.cpp
Tasks/: Tasks.cpp  Tasks.hpp
menu/: menu.cpp  menu.hpp  menu_test.cpp
menu/mocks/: ConcreteCommand1Mock.hpp  ConcreteCommand2Mock.hpp  TaskCommand.hpp
prioritizemock/: CompletedMock.cpp  CompletedMock.hpp  PrioritizeMock.hpp  SchedulerMock.cpp  SchedulerMock.hpp
taskcommandsheader/: addcomplextask.hpp  addtask.hpp  changetaskdeadline.hpp  changetaskdescription.hpp  changetaskname.hpp  changetaskstatus.hpp  printTasks.hpp  taskcommand.hpp
taskcommandssrc/: addcomplextask.cpp  addtask.cpp  changetaskdeadline.cpp  changetaskdescription.cpp  changetaskname.cpp  changetaskstatus.cpp  printTasks.cpp
taskmock/: Project.cpp  Project.hpp  ProjectMock.cpp  ProjectMock.hpp  TaskMock.cpp  TaskMock.hpp  Tasks.hpp  TasksMock.cpp  TasksMock.hpp
valgrindtests/: commandtest.cpp  strategytest.cpp
